fixed spacing errors on mobile type

--- a/templates/style.css
+++ b/templates/style.css
@@ -207,11 +207,11 @@ h2 {
         width: 320px; 
     }
     
-    #h1-pg02 { font-size: 30px; }
+    #h1-pg02 { margin-bottom: 0px; font-size: 30px; }
 
     #h2-pg02 { 
-        width: 300px;
-        font-size: 20px;
+        width: 277px;
+        font-size: 18px;
     }
 
     .button-page2 {
@@ -353,6 +353,10 @@ h2 {
 .form-radio-input input[type="radio"]:checked { border: 10px solid #3EB25E; }
 
 @media screen and (max-width: 480px) {
+    .container-form-radio {
+        
+    }
+    
     .container-form-radio form { 
         padding: 0px;
         margin: 0px;
@@ -361,7 +365,10 @@ h2 {
 
     .container-form-radio h3 { font-size: 16px; }
 
-    .form-radio-input label { font-size: 16px; }
+    .form-radio-input label { 
+        line-height: 0px;
+        font-size: 16px; 
+    }
     
     .form-radio-input input[type="radio"] { border: 8px solid #3eb15f57; }
     
@@ -422,7 +429,7 @@ h2 {
         height: 90px;
     }
 
-    .container-buttons button { font-size: 14px; }
+    .container-buttons button { margin-top: 10px; font-size: 16px; }
 
     .container-buttons-back-next { width: 317px; }
 
@@ -484,7 +491,10 @@ h2 {
         width: 317px; 
     }
     
-    .form-checkbox-input label { font-size: 16px;}
+    .form-checkbox-input label { 
+        line-height: 0px;
+        font-size: 16px;
+    }
 
     .container-form-checkbox h3 { font-size: 16px; }
 
@@ -568,8 +578,9 @@ h2 {
     }
 
     .form-text-input textarea{
-        width: 278px;
+        width: 298px;
         height: 131px;
+        font-size: 16px;
     }
 }
 
